--- a/Project App/res/values/strings.xml
+++ b/Project App/res/values/strings.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Acemenu</string>
+    <string name="app_name">ACEMEMO</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
-
+    <string name="Login">Login to Facebook</string>
+    <string name="instr1">Match the people you know with the things they like!</string>
+	<string name="instr2">Drag the people to the images of the things they like.</string>
+    
 </resources>
