login pages working

--- a/App/res/values/strings.xml
+++ b/App/res/values/strings.xml
@@ -9,5 +9,10 @@
     <string name="instr1">Match the people you know with the things they like!</string>
 	<string name="instr2">Drag the people to the images of the things they like.</string>
 	<string name="level">0</string>
+	<string name="startGame">Start Playing!</string>
+	<string name="allow">Allow</string>
+	<string name="disallow">Do Not Allow</string>
+	<string name="facebookinstr">Would you like this game to access your Facebook information?</string>
+	<string name="facebook">Facebook</string>
     
 </resources>
