--- a/App/res/values/strings.xml
+++ b/App/res/values/strings.xml
@@ -14,5 +14,6 @@
 	<string name="disallow">Do Not Allow</string>
 	<string name="facebookinstr">Would you like this game to access your Facebook information?</string>
 	<string name="facebook">Facebook</string>
+	<string name="play">Play Game</string>
     
 </resources>
