--- a/App/res/values/strings.xml
+++ b/App/res/values/strings.xml
@@ -34,7 +34,7 @@
 	<string name="levelIsTut">Level 1 is a Tutorial</string>
 	<string name="level2">Level 2</string>
 	<string name="goodJob">Good Job!!</string>
-	<string name="review">View Correct Answer</string>
+	<string name="review">View Correct Answers</string>
 	<string name="oops">Oops, some associations are wrong.</string>
 	<string name="replayLevel">Replay Level</string>
 	<string name="level3Statement1">Emir Likes Pizza</string>
