--- a/App/res/values/strings.xml
+++ b/App/res/values/strings.xml
@@ -26,7 +26,7 @@
 	<string name="ready">I\'m Ready!</string>
 	<string name="continueTo">Continue to Next Level</string>
 	<string name="gameover">Game Over</string>
-	<string name="restart">Restart Game</string>
+	<string name="restart">Restart</string>
 	<string name="playWithout">Play Without Facebook</string>
 	<string name="Done">Done</string>
 	<string name="memorize">Memorize the association below.</string>
@@ -35,7 +35,8 @@
 	<string name="levelIsTut">Level 1 is a Tutorial</string>
 	<string name="level2">Level 2</string>
 	<string name="goodJob">Good Job!!</string>
-	<string name="review">View Correct Answers</string>
+	<string name="review">Review</string>
+	<string name="nextLevel">Continue</string>
 	<string name="oops">Oops, some associations are wrong.</string>
 	<string name="replayLevel">Replay Level</string>
 	<string name="level3Statement1">Emir Likes Pizza</string>
