--- a/App/res/values/strings.xml
+++ b/App/res/values/strings.xml
@@ -45,5 +45,6 @@
 	<string name="level3Statement4">Emir Likes Music</string>
 	<string name="level3Statement5">Alison Likes Painting</string>
 	<string name="level3Statement6">Raph Likes Computers</string>
+	<string name="loadingFacebook">Loading Data From Facebook...</string>
 	
 </resources>
