--- a/App/res/values/strings.xml
+++ b/App/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
     <string name="Login">Login to Facebook</string>
-    <string name="howToPlay">How to Play:</string>
+    <string name="howToPlay">How to Play</string>
     <string name="instr1">Match the people you know with the things they like!</string>
 	<string name="instr2">Drag the people to the images of the things they like.</string>
 	<string name="level">1</string>
